updated index and package.json, so that i could test out new sourcemap stuff in a phaser fork

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "http://github.com/tchannel/phaser-coffeescript"
     },
     "dependencies": {
-        "photonstorm/phaser":"git://github.com/photonstorm/phaser#1.0.5"  
+        "photonstorm/phaser":"git://github.com/tchannel/phaser#source-maps-and-stuff"  
     },
     "devDependencies": {
         "coffee-script": "1.6.x",
